--- a/templates/about.html
+++ b/templates/about.html
@@ -45,7 +45,7 @@
 			 <br>
 		</nav>
 
-		<img src="/static/profile.png" alt="照片" width="300" class="img-fluid rounded-circle" id="PICTURE"> 
+		<img src="https://github.com/jeffrey921015/jeffery/blob/master/static/profile.png?raw=true" alt="照片" width="300" class="img-fluid rounded-circle" id="PICTURE"> 
 		<br><br><br>
 
 		<div class="row">
